# vibeOS

./: CMakeLists.txt  README.md  vibeOS  vibeOS.rar
docs/: general_project_especification.md
include/: commons.h  debug.h  disk.h  instruction.h  interface.h  iohandler.h  kernel.h  memory.h  process.h  program.h  semaphore.h
notes/: cmake.md  git.md  ncurses.md  next_schedulers_steps.txt
programs/: sint1  sint4  synt1  synt2  synt3  synt5  synt6
src/: buffer.txt  debug.c  instruction.c  interface  interface.c  iohandler.c  kernel.c  main.c  memory.c  process.c  program.c  semaphore.c
